lexers/archive/03-31-2024_old_tradeQuery/tradeQueryParser.py
# Generated from lexers/tradeQuery.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tradeQueryParser ( Parser ):

    grammarFileName = "tradeQuery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|'", "'#'", "'table'", "'`'", "'fieldsummary'", 
                     "'mvexpand'", "'time'", "'timerange'", "'latest'", 
                     "'earliest'", "'first'", "'last'", "'macro'", "'file'", 
                     "'null'", "'eval'", "'stats'", "'values'", "'by'", 
                     "'as'", "'WHERE'", "'rename'", "'reverse'", "'field'", 
                     "'fields'", "'search'", "'head'", "'rex'", "'regex'", 
                     "'dedup'", "'defang'", "'round'", "'min'", "'max'", 
                     "'median'", "'mode'", "'avg'", "'sum'", "'random'", 
                     "'sqrt'", "'range'", "'count'", "'dcount'", "'tonumb'", 
                     "'coalesce'", "'isnull'", "'isnotnull'", "'len'", "'concat'", 
                     "'replace'", "'lower'", "'upper'", "'capitalize'", 
                     "'ltrim'", "'rtrim'", "'trim'", "'match'", "'mvindex'", 
                     "'join'", "'mvjoin'", "'substr'", "'tostring'", "'type'", 
                     "'urlencode'", "'urldecode'", "'AND'", "'OR'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'('", "')'", "','", "';'", "'='", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "'++'", "'--'", "'~'" ]

    symbolicNames = [ "<INVALID>", "PIPE", "COMMENT", "TABLE", "TICK", "FIELDSUMMARY", 
                      "MVEXPAND", "TIME", "TIMERANGE", "LATEST", "EARLIEST", 
                      "FIRST", "LAST", "MACRO", "FILE", "NULL", "EVAL", 
                      "STATS", "VALUES", "BY", "AS", "WHERE", "RENAME", 
                      "REVERSE", "FIELD", "FIELDS", "SEARCH", "HEAD", "REX", 
                      "REGEX", "DEDUP", "DEFANG", "ROUND", "MIN", "MAX", 
                      "MEDIAN", "MODE", "AVG", "SUM", "RANDOM", "SQRT", 
                      "RANGE", "COUNT", "DCOUNT", "TONUMB", "COALESCE", 
                      "ISNULL", "ISNOTNULL", "LEN", "CONCAT", "REPLACE", 
                      "LOWER", "UPPER", "CAPITALIZE", "LTRIM", "RTRIM", 
                      "TRIM", "MATCH", "MVINDEX", "JOIN", "MVJOIN", "SUBSTR", 
                      "TOSTRING", "TYPE", "URLENCODE", "URLDECODE", "AND", 
                      "OR", "ID", "NUMBER", "DOUBLE_QUOTED_STRING", "BOOLEAN", 
                      "BOOLNUM", "LBRACK", "RBRACK", "LPAREN", "RPAREN", 
                      "COMMA", "SEMICOLON", "EQUALS", "EQUALS_EQUALS", "NOT_EQUALS", 
                      "GT", "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MUL", 
                      "DIV", "INC", "DEC", "BITWISE_NOT", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_tradeQuery = 1
    RULE_validLine = 2
    RULE_directive = 3
    RULE_expression = 4
    RULE_expressionString = 5
    RULE_logicalStringExpr = 6
    RULE_arithmeticStringExpr = 7
    RULE_factorStringExpr = 8
    RULE_expressionNumeric = 9
    RULE_compareNumericExpr = 10
    RULE_arithmeticNumericResultOnlyExpr = 11
    RULE_termNumericResultOnlyExpr = 12
    RULE_factorNumericResultOnlyExpr = 13
    RULE_expressionAny = 14
    RULE_logicalExpr = 15
    RULE_compareExpr = 16
    RULE_arithmeticExpr = 17
    RULE_termExpr = 18
    RULE_factorExpr = 19
    RULE_value = 20
    RULE_valueStringOnly = 21
    RULE_valueNumericResultOnly = 22
    RULE_unaryExpr = 23
    RULE_numericValue = 24
    RULE_booleanValue = 25
    RULE_stringValue = 26
    RULE_arrayValue = 27
    RULE_arrayValueNumeric = 28
    RULE_variableValue = 29
    RULE_comparisonOperator = 30
    RULE_logicalOperator = 31
    RULE_functionCall = 32
    RULE_numericFunctionCall = 33
    RULE_stringFunctionCall = 34
    RULE_specificFunctionCall = 35

    ruleNames =  [ "program", "tradeQuery", "validLine", "directive", "expression", 
                   "expressionString", "logicalStringExpr", "arithmeticStringExpr", 
                   "factorStringExpr", "expressionNumeric", "compareNumericExpr", 
                   "arithmeticNumericResultOnlyExpr", "termNumericResultOnlyExpr", 
                   "factorNumericResultOnlyExpr", "expressionAny", "logicalExpr", 
                   "compareExpr", "arithmeticExpr", "termExpr", "factorExpr", 
                   "value", "valueStringOnly", "valueNumericResultOnly", 
                   "unaryExpr", "numericValue", "booleanValue", "stringValue", 
                   "arrayValue", "arrayValueNumeric", "variableValue", "comparisonOperator", 
                   "logicalOperator", "functionCall", "numericFunctionCall", 
                   "stringFunctionCall", "specificFunctionCall" ]

    EOF = Token.EOF
    PIPE=1
    COMMENT=2
    TABLE=3
    TICK=4
    FIELDSUMMARY=5
    MVEXPAND=6
    TIME=7
    TIMERANGE=8
    LATEST=9
    EARLIEST=10
    FIRST=11
    LAST=12
    MACRO=13
    FILE=14
    NULL=15
    EVAL=16
    STATS=17
    VALUES=18
    BY=19
    AS=20
    WHERE=21
    RENAME=22
    REVERSE=23
    FIELD=24
    FIELDS=25
    SEARCH=26
    HEAD=27
    REX=28
    REGEX=29
    DEDUP=30
    DEFANG=31
    ROUND=32
    MIN=33
    MAX=34
    MEDIAN=35
    MODE=36
    AVG=37
    SUM=38
    RANDOM=39
    SQRT=40
    RANGE=41
    COUNT=42
    DCOUNT=43
    TONUMB=44
    COALESCE=45
    ISNULL=46
    ISNOTNULL=47
    LEN=48
    CONCAT=49
    REPLACE=50
    LOWER=51
    UPPER=52
    CAPITALIZE=53
    LTRIM=54
    RTRIM=55
    TRIM=56
    MATCH=57
    MVINDEX=58
    JOIN=59
    MVJOIN=60
    SUBSTR=61
    TOSTRING=62
    TYPE=63
    URLENCODE=64
    URLDECODE=65
    AND=66
    OR=67
    ID=68
    NUMBER=69
    DOUBLE_QUOTED_STRING=70
    BOOLEAN=71
    BOOLNUM=72
    LBRACK=73
    RBRACK=74
    LPAREN=75
    RPAREN=76
    COMMA=77
    SEMICOLON=78
    EQUALS=79
    EQUALS_EQUALS=80
    NOT_EQUALS=81
    GT=82
    LT=83
    GTEQ=84
    LTEQ=85
    PLUS=86
    MINUS=87
    MUL=88
    DIV=89
    INC=90
    DEC=91
    BITWISE_NOT=92
    NEWLINE=93
    WS=94

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tradeQuery(self):
            return self.getTypedRuleContext(tradeQueryParser.TradeQueryContext,0)


        def getRuleIndex(self):
            return tradeQueryParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = tradeQueryParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.tradeQuery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TradeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.PIPE)
            else:
                return self.getToken(tradeQueryParser.PIPE, i)

        def TABLE(self):
            return self.getToken(tradeQueryParser.TABLE, 0)

        def FILE(self):
            return self.getToken(tradeQueryParser.FILE, 0)

        def EQUALS(self):
            return self.getToken(tradeQueryParser.EQUALS, 0)

        def stringValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.StringValueContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.StringValueContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.NEWLINE)
            else:
                return self.getToken(tradeQueryParser.NEWLINE, i)

        def WHERE(self):
            return self.getToken(tradeQueryParser.WHERE, 0)

        def logicalExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.LogicalExprContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.LogicalExprContext,i)


        def validLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.ValidLineContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.ValidLineContext,i)


        def TIMERANGE(self):
            return self.getToken(tradeQueryParser.TIMERANGE, 0)

        def LPAREN(self):
            return self.getToken(tradeQueryParser.LPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.COMMA)
            else:
                return self.getToken(tradeQueryParser.COMMA, i)

        def variableValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.VariableValueContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.VariableValueContext,i)


        def RPAREN(self):
            return self.getToken(tradeQueryParser.RPAREN, 0)

        def expressionAny(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.ExpressionAnyContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.ExpressionAnyContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(tradeQueryParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return tradeQueryParser.RULE_tradeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTradeQuery" ):
                listener.enterTradeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTradeQuery" ):
                listener.exitTradeQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTradeQuery" ):
                return visitor.visitTradeQuery(self)
            else:
                return visitor.visitChildren(self)




    def tradeQuery(self):

        localctx = tradeQueryParser.TradeQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tradeQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==93:
                self.state = 74
                self.match(tradeQueryParser.NEWLINE)


            self.state = 77
            self.match(tradeQueryParser.PIPE)
            self.state = 78
            self.match(tradeQueryParser.TABLE)
            self.state = 79
            self.match(tradeQueryParser.FILE)
            self.state = 80
            self.match(tradeQueryParser.EQUALS)
            self.state = 81
            self.stringValue()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==70 or _la==77:
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==77:
                    self.state = 82
                    self.match(tradeQueryParser.COMMA)


                self.state = 85
                self.stringValue()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 91
                self.match(tradeQueryParser.WHERE)
                self.state = 92
                self.logicalExpr()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & -576465152497106976) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 478161907) != 0):
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==77:
                        self.state = 93
                        self.match(tradeQueryParser.COMMA)


                    self.state = 96
                    self.logicalExpr()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 104
            self.match(tradeQueryParser.NEWLINE)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 105
                    self.validLine() 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 111
                self.match(tradeQueryParser.PIPE)
                self.state = 112
                self.match(tradeQueryParser.TIMERANGE)
                self.state = 113
                self.match(tradeQueryParser.LPAREN)
                self.state = 116
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 114
                    self.expressionAny()
                    pass

                elif la_ == 2:
                    self.state = 115
                    self.functionCall()
                    pass


                self.state = 118
                self.match(tradeQueryParser.COMMA)
                self.state = 121
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 119
                    self.expressionAny()
                    pass

                elif la_ == 2:
                    self.state = 120
                    self.variableValue()
                    pass


                self.state = 123
                self.match(tradeQueryParser.COMMA)
                self.state = 124
                self.variableValue()
                self.state = 125
                self.match(tradeQueryParser.RPAREN)
                self.state = 126
                self.match(tradeQueryParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValidLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.PIPE)
            else:
                return self.getToken(tradeQueryParser.PIPE, i)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.DirectiveContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.NEWLINE)
            else:
                return self.getToken(tradeQueryParser.NEWLINE, i)

        def getRuleIndex(self):
            return tradeQueryParser.RULE_validLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValidLine" ):
                listener.enterValidLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValidLine" ):
                listener.exitValidLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValidLine" ):
                return visitor.visitValidLine(self)
            else:
                return visitor.visitChildren(self)




    def validLine(self):

        localctx = tradeQueryParser.ValidLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_validLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(tradeQueryParser.PIPE)
            self.state = 131
            self.directive()
            self.state = 132
            self.match(tradeQueryParser.NEWLINE)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self.match(tradeQueryParser.PIPE)
                    self.state = 134
                    self.directive()
                    self.state = 135
                    self.match(tradeQueryParser.NEWLINE) 
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEARCH(self):
            return self.getToken(tradeQueryParser.SEARCH, 0)

        def logicalExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.LogicalExprContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.LogicalExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.COMMA)
            else:
                return self.getToken(tradeQueryParser.COMMA, i)

        def REVERSE(self):
            return self.getToken(tradeQueryParser.REVERSE, 0)

        def DEDUP(self):
            return self.getToken(tradeQueryParser.DEDUP, 0)

        def EVAL(self):
            return self.getToken(tradeQueryParser.EVAL, 0)

        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.EQUALS)
            else:
                return self.getToken(tradeQueryParser.EQUALS, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.ExpressionContext,i)


        def stringValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.StringValueContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.StringValueContext,i)


        def variableValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.VariableValueContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.VariableValueContext,i)


        def STATS(self):
            return self.getToken(tradeQueryParser.STATS, 0)

        def functionCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.FunctionCallContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.FunctionCallContext,i)


        def AS(self, i:int=None):
            if i is None:
                return self.getTokens(tradeQueryParser.AS)
            else:
                return self.getToken(tradeQueryParser.AS, i)

        def valueStringOnly(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tradeQueryParser.ValueStringOnlyContext)
            else:
                return self.getTypedRuleContext(tradeQueryParser.ValueStringOnlyContext,i)


        def BY(self):
            return self.getToken(tradeQueryParser.BY, 0)

        def COUNT(self):
            return self.getToken(tradeQueryParser.COUNT, 0)
